# template-rusty-machine

./: .gitmodules  Makefile  README.md
app/: Cargo.toml  Makefile
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml
enclave/src/: lib.rs
