[package]
name = "app"
version = "1.0.0"
authors = ["Teaclave"]
build = "build.rs"

[dependencies] # You can specify the features you need for urts, such as global_exit and global_init
sgx_types = { branch = "dev", git = "ssh://git@github.com/mithril-security/teaclave-sgx-sdk.git" }
sgx_urts  = { branch = "dev", git = "ssh://git@github.com/mithril-security/teaclave-sgx-sdk.git" }
