[package]
name = "template-rusty-machine"
version = "1.0.0"
authors = ["Mithril Security"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"] 

[features]
default = []

[dependencies]
rusty-machine = {git = "https://github.com/AtheMathmo/rusty-machine.git"}